# blogOfCode

./: .env  README.md  docker-compose-backup.yaml  docker-compose-db.yaml  docker-compose.yaml  pyproject.toml
apps/blog/: permissions.py  serializers.py  urls.py  views.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
backend/: Dockerfile.dev  pyproject.toml
backend/apps/blog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/blog/migrations/: 0001_initial.py  0002_article_authors.py  0003_alter_article_options_alter_category_options_and_more.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0002_alter_customuser_first_name_and_more.py  0003_customuser_is_online_alter_customuser_is_active.py
backend/config/: settings.py  urls.py
config/: settings.py
frontend/: Dockerfile.dev  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  constants.js  main.js
frontend/src/api/: fetchWrapper.js
frontend/src/components/: ArticleCard.vue  ArticlesList.vue  ButtonPrimary.vue  ButtonSubmit.vue  CoAuthorsList.vue  FilterBar.vue  InputField.vue  LoginForm.vue  NavBar.vue  RegisterForm.vue  SelectField.vue  TagsList.vue  UserProfileForm.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/utils/: formatDate.js  passwdValidation.js
frontend/src/views/: AddArticleView.vue  ArticleDetailView.vue  EditArticleView.vue  HomeView.vue  LoginView.vue  MyArticlesView.vue  RegisterView.vue  (+1 more)
